VBH3 fixes to breadcrumb arrow alignment (#33)

--- a/src/styles/experiments/_header-version-two.scss
+++ b/src/styles/experiments/_header-version-two.scss
@@ -285,11 +285,13 @@
       // Breadcrumb style
       &.breadcrumbs {
         a {
-          color: rgba(255, 255, 255, 0.5);
+          display: inline-block;
+          vertical-align: middle;
+          color: rgba(255, 255, 255, 1);
           transition: color 250ms ease;
 
           &:hover {
-          color: rgba(255, 255, 255, 0.75);
+            color: rgba(255, 255, 255, 0.75);
           }
         }
 
